--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="config">config</string>
     <string name="save">save</string>
     <string name="setting">setting</string>
+    <string name="RMB">yuan</string>
+    <string name="change">转换</string>
+    <string name="inputRMB">input RMB</string>
 
 </resources>
